log
Thu, May 15, 2025  5:31:52 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Thu, May 15, 2025  5:52:07 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:53:7: error: unused variable 'k' [-Werror=unused-variable]
   int k = 0;
       ^
cc1.exe: all warnings being treated as errors
2923e56
Thu, May 15, 2025  5:52:16 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
d1d1f05
Thu, May 15, 2025  5:53:29 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e6bf9c7
Thu, May 15, 2025  5:59:29 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ef4fb8d
Thu, May 15, 2025  6:00:56 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7d9494f
Thu, May 15, 2025  6:02:15 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
13bbdc3
do., 18 de may. de 2025 16:51:37: 
 tests:  2|4
total_score: 15/70
f93c6b6
do., 18 de may. de 2025 17:52:35: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:53:16: error: comparison between pointer and integer [-Werror]
       if(valor != NULL){
                ^~
sudoku.c: In function 'is_final':
sudoku.c:86:7: error: unused variable 'visitiado' [-Werror=unused-variable]
   int visitiado [9];
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
0a54f4d
do., 18 de may. de 2025 17:53:06: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:53:16: error: comparison between pointer and integer [-Werror]
       if(valor != NULL){
                ^~
sudoku.c: In function 'is_final':
sudoku.c:83:7: error: unused variable 'visitiado' [-Werror=unused-variable]
   int visitiado [9];
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
c4ce0c2
do., 18 de may. de 2025 17:53:34: 
 sudoku.c | 6 ------
 1 file changed, 6 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:53:16: error: comparison between pointer and integer [-Werror]
       if(valor != NULL){
                ^~
cc1.exe: all warnings being treated as errors
29fe5dd
do., 18 de may. de 2025 17:53:52: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
4b4c1a9
do., 18 de may. de 2025 18:07:18: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
204bb4b
do., 18 de may. de 2025 18:08:25: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
3bb5b7f
do., 18 de may. de 2025 18:31:54: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
b0a4661
